--- a/rudpt_orb_slam3/CMakeLists.txt
+++ b/rudpt_orb_slam3/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rudpt_orbslam3)
+project(rudpt_orb_slam3)
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
