--- a/rudpt_orb_slam3/param/euroc_mono_RUD-PT.yaml
+++ b/rudpt_orb_slam3/param/euroc_mono_RUD-PT.yaml
@@ -1,6 +1,18 @@
 %YAML:1.0
 
 #--------------------------------------------------------------------------------------------
+# System config
+#--------------------------------------------------------------------------------------------
+
+# When the variables are commented, the system doesn't load a previous session or not store the current one
+
+# If the LoadFile doesn't exist, the system give a message and create a new Atlas from scratch
+#System.LoadAtlasFromFile: "Session_MH01_MH02_MH03_Mono"
+
+# The store file is created from the current session, if a file with the same name exists it is deleted
+#System.SaveAtlasToFile: "Session_MH01_MH02_MH03_Mono"
+
+#--------------------------------------------------------------------------------------------
 # Camera Parameters. Adjust them!
 #--------------------------------------------------------------------------------------------
 File.version: "1.0"
@@ -22,8 +34,8 @@ Camera1.p2: 0.000259878590498317
 Camera.width: 960
 Camera.height: 540
 
-# Camera.newWidth: 960
-# Camera.newHeight: 540
+# Camera.newWidth: 600
+# Camera.newHeight: 350
 
 # Camera frames per second 
 Camera.fps: 30
@@ -31,36 +43,15 @@ Camera.fps: 30
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
 
-# Transformation from camera to body-frame (imu)
-IMU.T_b_c1: !!opencv-matrix
-   rows: 4
-   cols: 4
-   dt: f
-   # data: [0., 1., 0., 0.,
-   #        1., 0., 0., 0.,
-   #        0., 0., -1., 0.,
-   #        0., 0., 0., 1.] 
-   data: [ 0.00893883,  0.99994833,  0.00484082,  0.04141057,
-           0.99988184, -0.00887748, -0.01254981, -0.0045487,
-          -0.01250618,  0.00495243, -0.99990953, -0.06482905,
-           0.,          0.,          0.,          1.        ]
-         
-
-# IMU noise
-IMU.NoiseGyro: 0.00075175083
-IMU.NoiseAcc: 0.00629031243
-IMU.GyroWalk: 0.00043257797
-IMU.AccWalk: 0.00190928453
-IMU.Frequency: 200.0
-
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
 #--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1000 # 1000
+ORBextractor.nFeatures: 1000
 
-# ORB Extractor: Scale factor between levels in the scale pyramid
+
+# ORB Extractor: Scale factor between levels in the scale pyramid 
 ORBextractor.scaleFactor: 1.2
 
 # ORB Extractor: Number of levels in the scale pyramid
@@ -75,7 +66,7 @@ ORBextractor.minThFAST: 7
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
-#--------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------
 Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1.0
 Viewer.GraphLineWidth: 0.9
@@ -83,7 +74,7 @@ Viewer.PointSize: 2.0
 Viewer.CameraSize: 0.08
 Viewer.CameraLineWidth: 3.0
 Viewer.ViewpointX: 0.0
-Viewer.ViewpointY: -1.7
-Viewer.ViewpointZ: 0.8
-Viewer.ViewpointF: -500.0
+Viewer.ViewpointY: -0.7
+Viewer.ViewpointZ: -1.8
+Viewer.ViewpointF: 500.0
 
