USmall udates to orb_slam3

--- a/param/orb_slam3/euroc_mono_inertial_RUD-PT.yaml
+++ b/param/orb_slam3/euroc_mono_inertial_RUD-PT.yaml
@@ -36,14 +36,14 @@ IMU.T_b_c1: !!opencv-matrix
    rows: 4
    cols: 4
    dt: f
-   # data: [0., 1., 0., 0.,
-   #        1., 0., 0., 0.,
-   #        0., 0., -1., 0.,
-   #        0., 0., 0., 1.] 
-   data: [ 0.00893883,  0.99994833,  0.00484082,  0.04141057,
-           0.99988184, -0.00887748, -0.01254981, -0.0045487,
-          -0.01250618,  0.00495243, -0.99990953, -0.06482905,
-           0.,          0.,          0.,          1.        ]
+   data: [0., 1., 0., 0.,
+          1., 0., 0., 0.,
+          0., 0., -1., 0.,
+          0., 0., 0., 1.] 
+#    data: [ 0.00893883,  0.99994833,  0.00484082,  0.04141057,
+#            0.99988184, -0.00887748, -0.01254981, -0.0045487,
+#           -0.01250618,  0.00495243, -0.99990953, -0.06482905,
+#            0.,          0.,          0.,          1.        ]
          
 
 # IMU noise
