Added functionality to automatically set start and end times for evaluation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,6 @@ catkin_install_python(PROGRAMS
   scripts/svo/svo_pose_to_txt.py
   scripts/orb_slam3/orb_slam3_pose_to_txt.py
   scripts/vins/vins_path_to_txt.py
+  scripts/set_eval_times.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
