--- a/param/vins/euroc_mono_imu_RUD-PT.yaml
+++ b/param/vins/euroc_mono_imu_RUD-PT.yaml
@@ -43,16 +43,16 @@ extrinsicTranslation: !!opencv-matrix
 
 #feature traker parameters
 max_cnt: 180            # max feature number in feature tracking
-min_dist: 30            # min distance between two features 
+min_dist: 10            # min distance between two features 
 freq: 30                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
-F_threshold: 1.0        # ransac threshold (pixel)
+F_threshold: 6.0        # ransac threshold (pixel)
 show_track: 1           # publish tracking image as topic
 equalize: 1             # if image is too dark or light, trun on equalize to find enough features
 fisheye: 0              # if using fisheye, trun on it. A circle mask will be loaded to remove edge noisy points
 
 #optimization parameters
-max_solver_time: 0.08  # max solver itration time (ms), to guarantee real time
-max_num_iterations: 16   # max solver itrations, to guarantee real time
+max_solver_time: 0.16  # max solver iteration time (ms), to guarantee real time
+max_num_iterations: 32   # max solver itrations, to guarantee real time
 keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 
 #imu parameters       The more accurate parameters you provide, the better performance
@@ -70,13 +70,13 @@ fast_relocalization: 0             # useful in real-time and large project
 
 #unsynchronization parameters
 estimate_td: 1                      # online estimate time offset between camera and imu
-td: 0.0                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
+td: 0.05389058151757878             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
 
 #rolling shutter parameters
 rolling_shutter: 0                  # 0: global shutter camera, 1: rolling shutter camera
 rolling_shutter_tr: 0               # unit: s. rolling shutter read out time per frame (from data sheet). 
 
 #visualization parameters
-save_image: 1                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
+save_image: 0                   # save image in pose graph for visualization prupose; you can close this function by setting 0 
 visualize_imu_forward: 0        # output imu forward propogation to achieve low latency and high frequence results
 visualize_camera_size: 0.4      # size of camera marker in RVIZ
